--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -24,7 +24,7 @@ jobs:
     
      # SonarQube Scan
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@v1.2
+      uses: sonarsource/sonarqube-scan-action@master # replaces v1.2 with master
       with:
         projectBaseDir: build-push-to-gh
       env:
