--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -33,6 +33,7 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
 
     - name: Commit new version and updated WorkflowTemplate.yaml
       run: |
