Added sonarqube version

--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -24,7 +24,7 @@ jobs:
         new_version=$(cat VERSION-GH)
         echo "new_version=$new_version" >> $GITHUB_ENV
     
-     # SonarQube Scanning
+     # SonarQube Scan
     - name: SonarQube Scanning
       
       uses: sonarsource/sonarqube-scan-action@master # replaces v1.2 with master
