--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -49,12 +49,12 @@ jobs:
       run: |
         cd build-push-to-gh
         REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-        docker build -t ghcr.io/REPO_NAME/node-app:${{ env.new_version }} .
+        docker build -t ghcr.io/${REPO_NAME}/node-app:${{ env.new_version }} .
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'ghcr.io/REPO_NAME/node-app:${{ env.new_version }}'
+        image-ref: 'ghcr.io/${{ github.repository }}/node-app:${{ env.new_version }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
