--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -24,9 +24,12 @@ jobs:
         new_version=$(cat VERSION-GH)
         echo "new_version=$new_version" >> $GITHUB_ENV
     
-     # SonarQube Scanner
-    - name: SonarQube Scanning
+     
+    - name: Set Lowercase Repo Name
+      run: echo "REPO_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
       
+    # SonarQube Scanner
+    - name: SonarQube Scanning
       uses: sonarsource/sonarqube-scan-action@master # replaces v1.2 with master
       with:
         projectBaseDir: build-push-to-gh
@@ -48,13 +51,13 @@ jobs:
     - name: Build the Docker image
       run: |
         cd build-push-to-gh
-        REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-        docker build -t ghcr.io/${REPO_NAME}/node-app:${{ env.new_version }} .
+        
+        docker build -t ghcr.io/$REPO_NAME/node-app:${{ env.new_version }} .
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'ghcr.io/${{ github.repository }}/node-app:${{ env.new_version }}'
+        image-ref: 'ghcr.io/$REPO_NAME/node-app:${{ env.new_version }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
@@ -71,9 +74,9 @@ jobs:
     - name: Push the Docker image to GitHub Container Registry
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        docker push ghcr.io/${{ github.repository }}/node-app:${{ env.new_version }}
-        docker tag ghcr.io/${{ github.repository }}/node-app:${{ env.new_version }} ghcr.io/${{ github.repository }}/node-app:latest
-        docker push ghcr.io/${{ github.repository }}/node-app:latest
+        docker push ghcr.io/$REPO_NAME/node-app:${{ env.new_version }}
+        docker tag ghcr.io/$REPO_NAME/node-app:${{ env.new_version }} ghcr.io/$REPO_NAME/node-app:latest
+        docker push ghcr.io/$REPO_NAME/node-app:latest
 
   deploy:
     name: Deploy to Argo
