--- a/.github/workflows/gh-wf.yml
+++ b/.github/workflows/gh-wf.yml
@@ -52,12 +52,12 @@ jobs:
       run: |
         cd build-push-to-gh
         
-        docker build -t ghcr.io/$REPO_NAME/node-app:${{ env.new_version }} .
+        docker build -t ghcr.io/${{ env.REPO_NAME }}/node-app:${{ env.new_version }} .
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'ghcr.io/$REPO_NAME/node-app:${{ env.new_version }}'
+        image-ref: 'ghcr.io/${{ env.REPO_NAME }}/node-app:${{ env.new_version }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
@@ -74,9 +74,9 @@ jobs:
     - name: Push the Docker image to GitHub Container Registry
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        docker push ghcr.io/$REPO_NAME/node-app:${{ env.new_version }}
-        docker tag ghcr.io/$REPO_NAME/node-app:${{ env.new_version }} ghcr.io/$REPO_NAME/node-app:latest
-        docker push ghcr.io/$REPO_NAME/node-app:latest
+        docker push ghcr.io/${{ env.REPO_NAME }}/node-app:${{ env.new_version }}
+        docker tag ghcr.io/${{ env.REPO_NAME }}/node-app:${{ env.new_version }} ghcr.io/${{ env.REPO_NAME }}/node-app:latest
+        docker push ghcr.io/${{ env.REPO_NAME }}/node-app:latest
 
   deploy:
     name: Deploy to Argo
