--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,3 +19,19 @@ spec:
           image: ghcr.io/gerardbulky/github-actions-workflow/node-app:latest
           ports:
             - containerPort: 8088
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: node-app  
+  labels:
+    app: node-app
+spec:
+  selector:
+    app: node-app
+  ports:
+    - protocol: TCP
+      port: 8088
+      targetPort: 8088
+  type: NodePort
